--- a/src/main/webapp/resources/css/movie_detail.css
+++ b/src/main/webapp/resources/css/movie_detail.css
@@ -245,6 +245,7 @@ body {
   transition: background 0.3s;
 }
 
+
 .reservation:hover {
   background: #2a8399;
 }
@@ -421,7 +422,7 @@ body {
   flex-shrink: 0;
 }
 
-.comment-asdf {
+.comment-notice {
   background: #f0f0ff;
   padding: 20px;
   border-radius: 8px;
@@ -435,6 +436,8 @@ body {
   color: #333;
   line-height: 1.6;
   margin-bottom: 8px;
+  width:100%;
+  height:90%;
 }
 
 /* 댓글 섹션 스타일 */
